# mlcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  setup.py  setup.sh
examples/: README.md
examples/cpp/: CMakeLists.txt  linear_regression_example.cpp  neural_network_example.cpp
examples/python/: COMPARISON_README.md  NEURAL_NETWORK_COMPARISON.md  housing_comparison_example.py  minimal_example.py  neural_network_comparison_example.py  simple_housing_example.py
lib/mlcpp/: __init__.py
lib/mlcpp/include/mlcpp/models/: linear_regression.hpp  neural_network.hpp
lib/mlcpp/python/: __init__.py  pymlcpp.cpp
lib/mlcpp/src/models/: linear_regression.cpp  neural_network.cpp
tests/: CMakeLists.txt  README.md  test_linear_regression.cpp  test_neural_network.cpp
